@@ -1,4 +1,5 @@
 <?php
+
 namespace Cobweb\ExternalImport\Utility;
 
 /*
@@ -17,6 +18,7 @@ namespace Cobweb\ExternalImport\Utility;
 use Cobweb\ExternalImport\Domain\Model\Log;
 use Cobweb\ExternalImport\Domain\Repository\LogRepository;
 use Cobweb\ExternalImport\Importer;
+use TYPO3\CMS\Core\Mail\MailMessage;
 use TYPO3\CMS\Core\Messaging\FlashMessage;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
 use TYPO3\CMS\Extbase\Object\ObjectManager;
@@ -38,7 +40,7 @@ class ReportingUtility
     /**
      * @var array Extension configuration
      */
-    protected $extensionConfiguration = array();
+    protected $extensionConfiguration = [];
 
     /**
      * @var ObjectManager
@@ -65,8 +67,7 @@ class ReportingUtility
         $this->logRepository = $logRepository;
     }
 
-    public function injectPersistenceManager(\TYPO3\CMS\Extbase\Persistence\Generic\PersistenceManager $persistenceManager)
-    {
+    public function injectPersistenceManager(\TYPO3\CMS\Extbase\Persistence\Generic\PersistenceManager $persistenceManager) {
         $this->persistenceManager = $persistenceManager;
     }
 
@@ -105,9 +106,7 @@ class ReportingUtility
                     LocalizationUtility::translate(
                             'LLL:EXT:external_import/Resources/Private/Language/ExternalImport.xlf:sync_table',
                             'external_import',
-                            array(
-                                    $this->importer->getExternalConfiguration()->getTable()
-                            )
+                            $this->importer->getExternalConfiguration()->getTable()
                     ),
                     'external_import',
                     $severity,
@@ -120,7 +119,6 @@ class ReportingUtility
      * Stores the messages to the external_import log.
      *
      * @return void
-     * @throws \TYPO3\CMS\Extbase\Persistence\Exception\IllegalObjectTypeException
      */
     public function writeToLog()
     {
@@ -136,18 +134,150 @@ class ReportingUtility
                         new \DateTime('@' . $GLOBALS['EXEC_TIME'])
                 );
                 $logEntry->setCruserId(
-                        $GLOBALS['BE_USER']->user['uid'] ?? 0
+                        $this->getBackendUser()->user['uid'] ?? 0
                 );
                 $logEntry->setConfiguration(
                         $this->importer->getExternalConfiguration()->getTable() . ' / ' . $this->importer->getExternalConfiguration()->getIndex()
                 );
                 $logEntry->setContext($context);
                 $logEntry->setMessage($message);
-                $this->logRepository->add($logEntry);
+                try {
+                    $this->logRepository->add($logEntry);
+                }
+                catch (\Exception $e) {
+                    // Nothing to do
+                }
             }
         }
         // Make sure the entries are persisted (this will not happen automatically
         // when called from the command line)
         $this->persistenceManager->persistAll();
+    }
+
+    /**
+     * Assembles a synchronization report for a given table/index.
+     *
+     * @param string $table Name of the table
+     * @param integer $index Number of the synchronisation configuration
+     * @param array $messages List of messages for the given table
+     * @return string Formatted text of the report
+     */
+    public function reportForTable($table, $index, $messages)
+    {
+        $languageObject = $this->getLanguageObject();
+        $report = sprintf(
+                        $languageObject->sL('LLL:EXT:external_import/Resources/Private/Language/ExternalImport.xlf:synchronizeTableX'),
+                        $table,
+                        $index
+                ) . "\n";
+        foreach ($messages as $type => $messageList) {
+            $report .= $languageObject->sL('LLL:EXT:external_import/Resources/Private/Language/ExternalImport.xlf:label.' . $type) . "\n";
+            if (count($messageList) === 0) {
+                $report .= "\t" . $languageObject->sL('LLL:EXT:external_import/Resources/Private/Language/ExternalImport.xlf:no.' . $type) . "\n";
+            } else {
+                foreach ($messageList as $aMessage) {
+                    $report .= "\t- " . $aMessage . "\n";
+                }
+            }
+        }
+        $report .= "\n\n";
+        return $report;
+    }
+
+    /**
+     * Sends a reporting mail to the configured e-mail address.
+     *
+     * @param string $subject Subject of the mail
+     * @param string $body Text body of the mail
+     * @return void
+     */
+    public function sendMail($subject, $body)
+    {
+        $result = 0;
+        // Define sender mail and name
+        $senderMail = '';
+        $senderName = '';
+        $backendUser = $this->getBackendUser();
+        if (!empty($backendUser->user['email'])) {
+            $senderMail = $backendUser->user['email'];
+            if (empty($backendUser->user['realName'])) {
+                $senderName = $backendUser->user['username'];
+            } else {
+                $senderName = $backendUser->user['realName'];
+            }
+        } elseif (!empty($GLOBALS['TYPO3_CONF_VARS']['MAIL']['defaultMailFromAddress'])) {
+            $senderMail = $GLOBALS['TYPO3_CONF_VARS']['MAIL']['defaultMailFromAddress'];
+            if (empty($GLOBALS['TYPO3_CONF_VARS']['MAIL']['defaultMailFromName'])) {
+                $senderName = $GLOBALS['TYPO3_CONF_VARS']['MAIL']['defaultMailFromAddress'];
+            } else {
+                $senderName = $GLOBALS['TYPO3_CONF_VARS']['MAIL']['defaultMailFromName'];
+            }
+        }
+        // If no mail could be found, avoid sending the mail
+        // The message will be logged as an error
+        if (empty($senderMail)) {
+            $message = 'No sender mail defined. Please check the manual.';
+
+            // Proceed with sending the mail
+        } else {
+            // Instantiate and initialize the mail object
+            /** @var $mailObject MailMessage */
+            $mailObject = GeneralUtility::makeInstance(MailMessage::class);
+            try {
+                $sender = [
+                        $senderMail => $senderName
+                ];
+                $mailObject->setFrom($sender);
+                $mailObject->setReplyTo($sender);
+                $mailObject->setTo(
+                        [
+                                $this->extensionConfiguration['reportEmail']
+                        ]
+                );
+                $mailObject->setSubject($subject);
+                $mailObject->setBody($body);
+                // Send mail
+                $result = $mailObject->send();
+                $message = '';
+            } catch (\Exception $e) {
+                $message = $e->getMessage() . '[' . $e->getCode() . ']';
+            }
+        }
+
+        // Report error in log, if any
+        if ($result === 0) {
+            $comment = 'Reporting mail could not be sent to ' . $this->extensionConfiguration['reportEmail'];
+            if (!empty($message)) {
+                $comment .= ' (' . $message . ')';
+            }
+            $backendUser->writelog(
+                    4,
+                    0,
+                    1,
+                    'external_import',
+                    $comment,
+                    []
+            );
+        }
+    }
+
+    /**
+     * Returns the global language object.
+     *
+     * @return \TYPO3\CMS\Lang\LanguageService
+     */
+    protected function getLanguageObject()
+    {
+        return $GLOBALS['LANG'];
+    }
+
+    /**
+     * Returns the BE user data.
+     *
+     * @return \TYPO3\CMS\Core\Authentication\BackendUserAuthentication
+     */
+    protected function getBackendUser()
+    {
+        return $GLOBALS['BE_USER'];
     }
 }
